--- a/Assets/Sources/View/View.asmdef
+++ b/Assets/Sources/View/View.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "View",
     "references": [
         "GUID:11cfd0ac625bf81489f91fd2836b5e52",
-        "GUID:4307f53044263cf4b835bd812fc161a4"
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
