--- a/Assets/Sources/Ads/Ads.asmdef
+++ b/Assets/Sources/Ads/Ads.asmdef
@@ -1,12 +1,8 @@
 {
-    "name": "View",
-    "rootNamespace": "View",
+    "name": "Ads",
+    "rootNamespace": "",
     "references": [
-        "GUID:11cfd0ac625bf81489f91fd2836b5e52",
-        "GUID:4307f53044263cf4b835bd812fc161a4",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:ff6de30450f3748908ff580f6ec64d9a",
-        "GUID:367169549b1d4c14b8dd733440bdaa0e"
+        "GUID:ff6de30450f3748908ff580f6ec64d9a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
